# Techtite

./: .gitignore  AI-DLC UG のプロンプト集.md  codemirror-6-markdown-research.md  index.html  package.json  pnpm-lock.yaml  techtite_mockup.html  vite.config.ts
aidlc-docs/inception/: ipc_event_protocol.md  parallel_work_guide.md  project_structure.md  shared_data_models.md  tech_stack.md  technical_spec_plan.md  user_stories.md  (+2 more)
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agent.rs  capture.rs  credentials.rs  editor.rs  file_tree.rs  fs.rs  git.rs  guardrails.rs  knowledge.rs  mod.rs  project.rs  publish.rs  search.rs  semantic.rs  session_log.rs  sync.rs  terminal.rs  vault.rs  window.rs
src-tauri/src/models/: agent.rs  cost.rs  editor.rs  file.rs  git.rs  log.rs  mod.rs  note.rs  project.rs  publish.rs  search.rs  semantic.rs  vault.rs
src-tauri/src/services/: agent_registry.rs  ambient_service.rs  capture_service.rs  conflict_service.rs  cost_tracker_service.rs  credential_service.rs  embedding_service.rs  fs_service.rs  git_service.rs  link_index_service.rs  log_rotation_service.rs  masking_service.rs  mod.rs  process_service.rs  project_service.rs  publish_service.rs  sandbox_service.rs  search_service.rs  session_log_service.rs  sync_service.rs  tag_service.rs  vault_service.rs  vector_store_service.rs  watcher_service.rs
src-tauri/src/utils/: error.rs  gitignore.rs  mod.rs  path.rs
src-tauri/tests/: integration_tests.rs
(+122 files in other folders)
