[package]
name = "techtite"
version = "0.1.0"
description = "Techtite - Knowledge-powered development environment"
authors = ["miyanorococo"]
edition = "2021"

[lib]
name = "techtite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "8"
notify-debouncer-mini = "0.6"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
git2 = "0.20"
thiserror = "2"
dirs-next = "2"
portable-pty = "0.8"
tempfile = { version = "3", optional = true }

[dev-dependencies]
tempfile = "3"
